--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,12 @@ a {
 /* ---------------sidebar start------------------ */
 
 .sidebar {
-    width: 200px;
+    float: left;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 15%;
     height: 100vh;
     border-right: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -51,47 +56,73 @@ a {
     font-size: 18px;
     letter-spacing: 1.6px;
     line-height: 20px;
-    color: white;
+    color: gold;
     font-family: sans-serif;
 }
 
 .sidebar-list {
-    height: 375px;
+    height: 372px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
 }
 
 .sidebar-item {
+    position: relative;
     width: 100%;
-    display: flex;
-    padding: 17px 15px  15px 30px;
-    justify-content: space-between;
-    border-bottom: 1px solid #1D1D1D;
-    transition: 0.3s;
-}
-
-.sidebar-item:hover {
-    border-bottom: 1px solid #05FDD8;
 }
 
 .sidebar-item:last-child {
-    border: none;
+    padding: 20px 0px;
+}
+.sidebar-item div {
+    padding-left:25px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sidebar-item hr {
+    width: 0%;
+    position: absolute;
+    height: 2px;
+    border: #05FDD8;
+    top: 100%;
+    background-color: #05FDD8;
+    transition: 1s;
+}
+
+.sidebar-item:hover hr {
+    width: 100%;
+}
+
+.sidebar-item:hover a {
+    color: gold;
 }
 
 .sidebar-link {
+    padding: 20px 25px;
     color: rgb(160, 160, 160);
     display: flex;
     align-items: center;
     font-size: 17px;
     letter-spacing: 2px;
+    transition: 0.3s;
+    height: 100%;
 }
 
 .sidebar-item i {
     margin-right: 10px;
     font-size: 20px;
     color: #05FDD8;
+    transition: 0.3s;
 }
+
+.sidebar-item div i:hover {
+    transform: scale(1.5);
+    color: gold;
+} 
+
 .sidebar-items {
     background-color: #141414;
 }
