--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ a {
     top: 0;
     left: 0;
     z-index: 1;
-    width: 15%;
+    width: 200px;
     height: 100vh;
     border-right: 1px solid rgba(255, 255, 255, 0.2);
 }
