--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ a {
 
 .sidebar-top {
     height: 250px;
-    background-color: #141414;
+    /* background-color: #141414; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,7 +90,8 @@ a {
     border: #05FDD8;
     top: 100%;
     background-color: #05FDD8;
-    transition: 1s;
+    z-index: 1;
+    transition: 0.5s;
 }
 
 .sidebar-item:hover hr {
@@ -102,7 +103,7 @@ a {
 }
 
 .sidebar-link {
-    padding: 20px 25px;
+    padding: 21px 25px;
     color: rgb(160, 160, 160);
     display: flex;
     align-items: center;
