--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ a {
 
 .sidebar-top {
     height: 250px;
-    /* background-color: #141414; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -62,7 +61,7 @@ a {
 }
 
 .sidebar-list {
-    height: 372px;
+    height: 370px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -77,8 +76,8 @@ a {
     padding: 20px 0px;
 }
 .sidebar-item div {
-    padding-left:25px;
-    padding-right: 10px;
+    padding-left: 35px;
+    padding-right: 20px;
     display: flex;
     justify-content: space-between;
 }
@@ -103,7 +102,7 @@ a {
 }
 
 .sidebar-link {
-    padding: 21px 25px;
+    padding: 20px 35px;
     color: rgb(160, 160, 160);
     display: flex;
     align-items: center;
@@ -117,7 +116,11 @@ a {
     margin-right: 10px;
     font-size: 20px;
     color: #05FDD8;
-    transition: 0.3s;
+    transition: 0.5s;
+}
+
+.sidebar-item div i {
+    font-size: 25px;
 }
 
 .sidebar-item div i:hover {
