--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-    /* background-color: #183153; */
     background-color: #1D1D1D;
     color: white;
 }
@@ -28,7 +27,7 @@ a {
     z-index: 1;
     width: 250px;
     height: 100vh;
-    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .sidebar-top {
@@ -48,7 +47,7 @@ a {
     font-size: 30px;
     font-weight: bold;
     letter-spacing: 4px;
-    color: #05FDD8;
+    color: rgb(160, 160, 160);
     margin: 7px 0px;
 }
 
@@ -56,7 +55,7 @@ a {
     font-size: 18px;
     letter-spacing: 1.6px;
     line-height: 20px;
-    color: #05FDD8;
+    color: rgb(160, 160, 160);
     font-family: sans-serif;
 }
 
@@ -101,7 +100,7 @@ a {
     color: #05FDD8;
 }
 
-.sidebar-item:hover i {
+.sidebar-item:hover .sidebar-link i{
     color: #05FDD8;
 }
 
@@ -136,3 +135,6 @@ a {
     background-color: #141414;
 }
 
+.activ a, .activ a i{
+    color: #05FDD8;
+}
